# zivero-monorep

./: .gitignore  Procfile  README.md  create_fake_data.py  database.sqlite  load_products.py  package.json  pyproject.toml  quotes_unsplash.py  requirements.txt  test.vue  test_cloudinary.html  turbo.json  utils.py
Orders/: schema.py
apps/backend/: .gitignore  Procfile  create_fake_data.py  database.sqlite  load_products.py  manage.py  package.json  pyproject.toml  requirements.txt
apps/backend/Orders/: models.py  schema.py
apps/backend/Orders/migrations/: 0001_initial.py  0003_auto_20201118_1700.py  0004_auto_20201118_1732.py  0008_auto_20220108_1314.py  0009_auto_20220108_1334.py  0011_order_fulfillment_status.py  0013_auto_20220212_1244.py  0014_auto_20220219_0648.py  0015_auto_20220219_0705.py
apps/backend/Users/: admin.py  apps.py  models.py  schema.py
apps/backend/Users/migrations/: 0002_auto_20201117_1427.py  0007_auto_20220108_1314.py  0008_auto_20220206_1710.py  0010_auto_20220219_0705.py
apps/backend/Zivero/: MIDDLEWARE.py  asgi.py  schema.py  settings.py  urls.py  views.py
apps/backend/cart/: cart.py  decorators.py  models.py  schema.py  tests.py
apps/backend/checkout/: checkout.py  schema.py  urls.py  webhooks.py
apps/backend/filters/: schema.py
apps/backend/queries/: mutations.txt
apps/backend/search/: schema.py  types.py
apps/backend/shop/: admin.py  models.py  schema.py  types.py  utils.py  workspace.code-workspace
apps/backend/social/: .schema.py.swp  schema.py  utils.py
apps/backend/wishlist/: models.py  schema.py
(+255 files in other folders)
